# logstats

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  clfMonitor.tgz  conanfile.txt  config.json  generatorConfig.json  monitorConfig.json
conf/: generatorConfig.json  monitorConfig.json  scenarioConfig.json
scripts/: format.sh  lint.sh
src/: CMakeLists.txt  buffer_splitter.cpp  buffer_splitter.h  cfl.l  cfl.y  config.cpp  config.h  core.cpp  core.h  data.cpp  data.h  file_watcher.cpp  file_watcher.h  http.h  main.cpp  parser.cpp  parser.h  ui.cpp  ui.h
src/generator/: CMakeLists.txt  config.cpp  config.h  log_generator.cpp
src/scenarioPlayer/: CMakeLists.txt  config.cpp  config.h  scenario.cpp
tests/: CMakeLists.txt  config.cpp  main.cpp  parser.cpp
